--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=StudentManagementSystem
 #spring.main.allow-bean-definition-overriding=true
 #spring.datasource.jndi-name = java:jboss/datasources/apnaclassroom
 
-spring.datasource.url=jdbc:mysql://localhost:3306/apnaclassroom
+spring.datasource.url=jdbc:mysql://containers-us-west-81.railway.app:7525/railway
 spring.datasource.username=root
-spring.datasource.password=Codeclass4u
+spring.datasource.password=XLCXCxLVvq0YrxcnI2lt
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.ssl=true
 spring.jpa.database=MYSQL
