Sensitive information removed from properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,10 @@ spring.datasource.dbcp2.default-auto-commit = true
 
 
 #SMTP Server for Email
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=codeclass4u@gmail.com
-spring.mail.password=fcjtrukayfxslrph
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
 send.mail=N
 
 #Additional properties
