--- a/src/main/resources/application.local.properties
+++ b/src/main/resources/application.local.properties
@@ -18,10 +18,10 @@ spring.datasource.dbcp2.default-auto-commit = true
 
 
 #SMTP Server
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=codeclass4u@gmail.com
-spring.mail.password=fcjtrukayfxslrph
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
 
 #Additional properties
 spring.mail.properties.mail.smtp.auth=true
