Added send email details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,11 +19,11 @@ spring.datasource.dbcp2.default-auto-commit = true
 
 
 #SMTP Server for Email
-spring.mail.host=
-spring.mail.port=
-spring.mail.username=
-spring.mail.password=
-send.mail=N
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=codeclass4u@gmail.com
+spring.mail.password=fcjtrukayfxslrph
+send.mail=Y
 
 #Additional properties
 spring.mail.properties.mail.smtp.auth=true
