--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,6 @@ spring.sleuth.sampler.probability=1.0
 # Elasticsearch settings
 spring.data.elasticsearch.cluster-nodes=localhost:9200
 spring.data.elasticsearch.cluster-name=elasticsearch
+
+server.ssl.enabled=true
+server.forward-headers-strategy=native
