Added ssl enabled true in properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,4 +52,4 @@ spring.data.elasticsearch.cluster-nodes=localhost:9200
 spring.data.elasticsearch.cluster-name=elasticsearch
 
 server.ssl.enabled=true
-server.forward-headers-strategy=native
+#server.forward-headers-strategy=native
