Added ssl enabled true in properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,5 +51,5 @@ spring.sleuth.sampler.probability=1.0
 spring.data.elasticsearch.cluster-nodes=localhost:9200
 spring.data.elasticsearch.cluster-name=elasticsearch
 
-server.ssl.enabled=true
+#server.ssl.enabled=true
 #server.forward-headers-strategy=native
