Configured multiple environment properties correctly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,3 +57,6 @@ spring.data.elasticsearch.cluster-name=elasticsearch
 #Swagger environment config
 swagger.prod.url=https://adminease.in
 swagger.local.url=http://localhost:8080
+
+#To generate sleuthId
+logging.level.org.springframework.cloud.sleuth=DEBUG
