--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.2</version>
+		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.apnaclassroom</groupId>
@@ -100,18 +100,12 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-annotations</artifactId>
-			<version>2.2.15</version>
-		</dependency>
+		</dependency>-->
 
 		<!-- Swagger UI Config Dependencies -->
 		<dependency>
@@ -120,12 +114,13 @@
 			<version>3.0.0</version> <!-- Use the appropriate version -->
 		</dependency>
 
-		<!-- This dependency added when swagger was loading at all -->
+		<!-- This dependency added when swagger was not loading at all -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.0.2</version>
+			<version>2.2.0</version>
 		</dependency>
+
 		<!-- These dependencies added when swagger was not showing completely -->
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
@@ -171,6 +166,11 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
