--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,9 +3,9 @@ spring.application.name=StudentManagementSystem
 #spring.main.allow-bean-definition-overriding=true
 #spring.datasource.jndi-name = java:jboss/datasources/apnaclassroom
 
-spring.datasource.url=jdbc:mysql://containers-us-west-207.railway.app:6838/railway
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:10875/railway
 spring.datasource.username=root
-spring.datasource.password=S9J7Sibzcg4EZXLo0Lf5
+spring.datasource.password=-adDdb6d6Aga-6fAdeF3A3-ffcH2DEEc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.ssl=true
 spring.jpa.database=MYSQL
