--- a/src/main/resources/application-uat.properties
+++ b/src/main/resources/application-uat.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/apnaclassroom
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:10875/railway
 spring.datasource.username=root
-spring.datasource.password=Codeclass4u
+spring.datasource.password=-adDdb6d6Aga-6fAdeF3A3-ffcH2DEEc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.ssl=true
-spring.jpa.database = MYSQL
-spring.jpa.show-sql = true
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.dbcp2.initial-size = 50
 spring.datasource.dbcp2.max-idle = 50
