Database credentials updated

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,7 +3,7 @@ spring.application.name=StudentManagementSystem
 #spring.main.allow-bean-definition-overriding=true
 #spring.datasource.jndi-name = java:jboss/datasources/apnaclassroom
 
-spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:10875/railway
+spring.datasource.url=jdbc:mysql://root:-adDdb6d6Aga-6fAdeF3A3-ffcH2DEEc@viaduct.proxy.rlwy.net:10875/railway
 spring.datasource.username=root
 spring.datasource.password=-adDdb6d6Aga-6fAdeF3A3-ffcH2DEEc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
