--- a/src/main/resources/application-uat.properties
+++ b/src/main/resources/application-uat.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:10875/railway
+spring.datasource.url=jdbc:mysql://root:-adDdb6d6Aga-6fAdeF3A3-ffcH2DEEc@viaduct.proxy.rlwy.net:10875/railway
 spring.datasource.username=root
 spring.datasource.password=-adDdb6d6Aga-6fAdeF3A3-ffcH2DEEc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
