Properties file corrected

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,9 +3,9 @@ spring.application.name=university-service
 #spring.main.allow-bean-definition-overriding=true
 #spring.datasource.jndi-name = java:jboss/datasources/apnaclassroom
 
-spring.datasource.url=jdbc:mysql://containers-us-west-207.railway.app:6838/railway
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:10875/railway
 spring.datasource.username=root
-spring.datasource.password=S9J7Sibzcg4EZXLo0Lf5
+spring.datasource.password=-adDdb6d6Aga-6fAdeF3A3-ffcH2DEEc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.ssl=true
 spring.jpa.database=MYSQL
@@ -47,9 +47,16 @@ springdoc.swagger-ui.path=/swagger-ui.html
 spring.sleuth.sampler.probability=1.0
 #logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
-# Elasticsearch settings
+#Elasticsearch settings
 spring.data.elasticsearch.cluster-nodes=localhost:9200
 spring.data.elasticsearch.cluster-name=elasticsearch
 
 #server.ssl.enabled=true
 #server.forward-headers-strategy=native
+
+#Swagger environment config
+swagger.prod.url=https://adminease.in
+swagger.local.url=http://localhost:8080
+
+#To generate sleuthId
+logging.level.org.springframework.cloud.sleuth=INFO
